added percolator analysis capability, need to plug it in to pecanpie